# Leanlang

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  langgraph.json  pyproject.toml  requirements.txt
backend/.langgraph_api/: .langgraph_ops.pckl
backend/app/: main.py
backend/app/agents/: base.py  business_model.py  critic.py  customer_segment.py  decision.py  experiment_design.py  hypotheses.py  metrics.py  plan_estimate.py  problem.py  report.py  risk.py  sequencing.py  success_criteria.py  supervisor.py  value_proposition.py
backend/app/agents/prompts/: __init__.py
backend/app/api/: streaming.py
backend/app/api/routes/: auth.py  blueprint.py  export.py  projects.py
backend/app/auth/: security.py
backend/app/catalog/: experiments.json  seed.py  service.py
backend/app/core/: config.py  llm.py  observability.py  rate_limit.py
backend/app/db/: models.py  session.py
backend/app/eval/: golden_set.json  rubric.py  run_eval.py
backend/app/graph/: build_graph.py  runtime.py  studio.py
backend/app/schemas/: _validators.py  api.py  blueprint.py  decision.py  enums.py  experiment.py  hypothesis.py  lean.py  measurement.py  plan.py  report.py  roadmap.py  state.py  testcard.py
backend/docs/: auditoria-smith.md  plan-agente-investigador-tavily.md
backend/tests/: conftest.py  test_api.py  test_catalog.py  test_graph_smoke.py  test_observability.py  test_prompt_versions.py  test_rubric.py
frontend/: Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+42 files in other folders)
